# openSystem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  hardware_manifest_qemu.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  rfc.yml
.github/workflows/: ci.yml
app-store/: Cargo.toml  README.md
app-store/benches/: registry_bench.rs
app-store/src/: lib.rs  main.rs  manifest.rs  osp.rs  registry.rs  server.rs  signing.rs
app-store/tests/: auth.rs  e2e_signing.rs
docs/iteration/: current.json
docs/plans/: 2026-03-09-agent-team-iteration.md
gui-renderer/: Cargo.toml
gui-renderer/src/: bevy_renderer.rs  cache.rs  event_bridge.rs  lib.rs  uidl.rs  uidl_to_ecs.rs  widget_system.rs
os-agent/: Cargo.toml
os-agent/benches/: intent_bench.rs
os-agent/src/: ai_client.rs  app_generator.rs  config.rs  intent.rs  lib.rs  main.rs  nl_terminal.rs  setup_wizard.rs  utils.rs  wasm_runtime.rs
os-agent/tests/: integration_store.rs
os-syscall-bindings/: Cargo.toml
os-syscall-bindings/src/: lib.rs
osctl/: Cargo.toml
osctl/src/: main.rs
resource-scheduler/: Cargo.toml  README.md  build.rs
resource-scheduler/bpf/: ai_scheduler.bpf.c
resource-scheduler/src/: ai_decision.rs  executor.rs  lib.rs  monitor.rs  types.rs
resource-scheduler/tests/: integration_ai.rs  stability.rs
rom-builder/: build.py  driver_db.json  hardware_resolver.py  test_resolver.py
rom-builder/board/qemu_x86_64/: README.md
