[package]
name = "os-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "os_agent"
path = "src/lib.rs"

[[bin]]
name = "os-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustyline = "13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
libc = "0.2"
wasmtime = "42.0.1"
wasmtime-wasi = "42.0.1"
gui-renderer = { path = "../gui-renderer" }
url = "2"
ureq = "2"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
wat = "1.245.1"

[[bench]]
name = "intent_bench"
harness = false
