[package]
name = "osctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "osctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
app-store = { path = "../app-store" }
hex = "0.4"
dirs-next = "2"
tar = "0.4"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
