[package]
name = "resource-scheduler"
version = "0.1.0"
edition = "2021"

[features]
default = []
ebpf = ["libbpf-cargo"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
libbpf-cargo = { version = "0.24", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
wiremock = "0.6"
